Fix form spacing

--- a/src/solution5/css/styles.css
+++ b/src/solution5/css/styles.css
@@ -25,24 +25,17 @@ body, html {
 
 .form-adaptive {
     display: flex;
+    gap: 1rem;
 }
 
 @media only screen and (min-width: 481px) {
     .form-adaptive {
         flex-direction: row;
     }
-
-    #submit {
-        margin-left: 1rem;
-    }
 }
 
 @media only screen and (max-width: 480px) {
     .form-adaptive {
         flex-direction: column;
-    }
-
-    #submit {
-        margin-top: 1rem;
     }
 }
